--- a/back.html
+++ b/back.html
@@ -8,12 +8,14 @@
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <link href="https://replitcss.tehost.ml/replit.min.css" rel="stylesheet" type="text/css" />
 </head>
-<body class="content">
-  <card id="home" class="w3-content">
+<body id="content" class="content">
+<card class="w3-content">
   <noscript><p>Please enable javascript.</p></noscript>
   <script src="script.js"></script>
-  <a href="index.html">Home</a>
-  <a href="about.xhtml">About</a> 
-  </card>
+  <a href="index.html#content">Home</a>
+  <a href="back.html#content">The back</a> 
+  <button onclick="theveryback()">theveryback()</button>
+</card>
+
 </body>
 </html>
