--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <link href="https://replitcss.tehost.ml/replit.min.css" rel="stylesheet" type="text/css" />
 </head>
-<body class="content">
-<!-- Start Content -->
-<card id="home" class="w3-content">
+<body id="content" class="content">
+<card class="w3-content">
   <noscript><p>Please enable javascript.</p></noscript>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a> 
+  <script src="script.js"></script>
+  <a href="index.html#content">Home</a>
+  <a href="back.html#content">The back</a> 
 </card>
-<!-- End Content -->
+<card>
+<h1>Welcome to thesnet, the place where I post stuff.</h1>
+</card>
+<card>
+  <a href="https://replit.com/@SamsonOrr">Replit</a>
+</card>
 </body>
 </html>
