--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
 <meta charset="UTF-8" />
-<title>W3.CSS</title>
+<title>Thesnet</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -16,7 +16,7 @@
   <a href="back.html#content">The back</a> 
 </card>
 <card>
-<h1>Welcome to thesnet, the place where I post stuff.</h1>
+<h1>Welcome to thesnet, the place where I put stuff.</h1>
 </card>
 <card>
   <a href="https://replit.com/@SamsonOrr">Replit</a>
